# yuragi

./: AGENTS.md  LICENSE  README.md  noxfile.py  pyproject.toml  spec.md  tasks.md
.github/workflows/: ci.yml
constraints/: python3.13-linux-x86_64.txt
samples/: __init__.py  crud_requests.json  db_fixture.json  glossary.json  python_api_example.py  repo_hits.json
src/yuragi/: __init__.py  __main__.py
src/yuragi/agents/: __init__.py  normalize_agent.py  orchestrator.py  verify_agent.py
src/yuragi/core/: __init__.py  errors.py  models.py  safety.py  schema.py  scoring.py
src/yuragi/interfases/: __init__.py  factory.py  types.py
src/yuragi/interfases/cli/: __init__.py  app.py
src/yuragi/interfases/mcp/: __init__.py  server_fastmcp.py
src/yuragi/llm/: __init__.py  client.py  prompts.py  structured.py
src/yuragi/pipelines/: __init__.py  crud_normalize.py
src/yuragi/tools/: __init__.py  db.py  repo.py  runtime.py  specs.py
tests/: __init__.py
tests/core/: __init__.py  test_errors.py
tests/unit/: __init__.py
tests/unit/agents/: test_normalize_agent.py  test_orchestrator.py  test_verify_agent.py
tests/unit/core/: test_models.py  test_safety.py  test_schema.py  test_scoring.py
tests/unit/interfases/: __init__.py  test_cli_app.py  test_factory.py
tests/unit/interfases/mcp/: __init__.py  test_server_fastmcp.py
tests/unit/llm/: __init__.py  test_prompts.py  test_structured_output.py
tests/unit/pipelines/: test_crud_normalize.py
tests/unit/tools/: __init__.py  test_db.py  test_repo.py  test_runtime.py  test_specs.py
